// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adding empty workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: my-workflow
on: {}
jobs: {}
"
`;

exports[`setting runName 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: run-name
run-name: This is a custom run-name
on: {}
jobs: {}
"
`;

exports[`workflow triggers 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: triggers
on:
  schedule:
    - cron: 5 4 * * *
  workflow_dispatch: {}
  repository_dispatch: {}
  workflow_call: {}
  branch_protection_rule: {}
  check_run: {}
  check_suite: {}
  create: {}
  delete: {}
  deployment: {}
  deployment_status: {}
  discussion: {}
  discussion_comment: {}
  fork: {}
  gollum: {}
  issue_comment: {}
  issues: {}
  label: {}
  merge_group:
    branches:
      - main
  milestone: {}
  page_build: {}
  pull_request: {}
  pull_request_review: {}
  pull_request_review_comment: {}
  pull_request_target: {}
  push: {}
  registry_package: {}
  release: {}
  status: {}
  watch: {}
  workflow_run: {}
jobs: {}
"
`;
